Bug 405107 - File->Save Page As... download often reports 0 bytes as saved. r=sdwilsh, b-ff3=beltzner